force-app/main/default/objects/Holiday__c/fields/Holiday_date__c.field-meta.xml
<CustomField>
    <fullName>Holiday_date__c</fullName>
    <label>Holiday date</label>
    <type>Date</type>
</CustomField>