force-app/main/default/objects/Holiday__c/fields/Holiday_Name__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Name__c</fullName>
    <label>Holiday Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>